# hmm-trading

./: .gitignore  GITHUB_ISSUES.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
configs/: example_es_csv.yaml  example_es_seasonality_standalone.yaml  example_es_side_info_comparison.yaml  example_es_vol_ratio_standalone.yaml
data/: README.md
docs/: paper_spec.md
scripts/: build_fixtures.py  repro.py  run_side_info_comparison.py
src/hft_hmm/: __init__.py  _version.py  data.py  preprocessing.py  project.py
src/hft_hmm/config/: __init__.py  experiment_config.py
src/hft_hmm/core/: __init__.py  references.py  state_metadata.py
src/hft_hmm/evaluation/: __init__.py  metrics.py
src/hft_hmm/experiments/: __init__.py  _data_loading.py  runner.py  side_info_comparison.py  standalone_predictor.py  walk_forward.py
src/hft_hmm/features/: __init__.py  seasonality.py  (+2 more)
tests/: test_core_references.py  test_data_io.py  test_experiment_config.py  test_fixtures_build.py  test_forward_filter.py  test_gaussian_hmm_wrapper.py  test_iohmm_approx.py  test_metrics.py  test_model_selection.py  test_plr_baseline.py  test_preprocessing.py  test_project.py  test_repro.py  test_seasonality.py  test_side_info_comparison.py  test_signals.py  test_splines.py  test_standalone_predictor.py  test_state_metadata.py  test_volatility_ratio.py  test_walk_forward.py
tests/fixtures/: es_1min_month.csv  es_1min_sample.csv  sample_databento_ohlcv.parquet  sample_prices.csv
(+11 files in other folders)
